--- a/app/globals.css
+++ b/app/globals.css
@@ -11,8 +11,9 @@
 
 @media screen and (min-width: 768px) {
     .ad-container {
-        width: 80px;
-        height: 80px;
+        width: 100px;
+        height: 100px;
+        margin-left: 15px;
     }
 }
   
