--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,8 @@
     position: absolute;
     width: 50px;
     height: 50px;
+    pointer-events: auto;   
+    cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
